# pyu

./: .coveragerc  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.rst  dill_bytespec_test.ipynb  dill_perf_test.py  dill_pickle_test.py  example.py  pyproject.toml  setup.cfg  setup.py  test.py  test2.py
docs/: conf.py  index.rst
src/python_utils/: __init__.py  print.py  skeleton.py
src/pyu/: __init__.py  batch.py  builtins.py  cli_to_lib.py  dispatch.py  dump.py  env_utils.py  functools.py  icecream.py  img.py  itertools.py  lazy_type.py  mlflow_utils.py  nicecream.py  os.py  pandas_utils.py  parallelism.py  pdf.py  re.py  seed.py  skeleton.py  str.py  traceback.py  update.py
test/test/: dupa.py  example.py  test2.py
test/testtest/: test4.ipynb
tests/: conftest.py  test_skeleton.py
