[project]
name = "pyu"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Szulc",email = "58491724+j-szulc@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "pyu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
